--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -8,10 +8,14 @@ else()
    set(ASSEMBLE assembleRelease)
 endif()
 set(ALLEGRO_AAR ${LIBRARY_OUTPUT_PATH}/${AAR_NAME})
-set(ALLEGRO_AAR ${ALLEGRO_AAR} PARENT_SCOPE) 
+set(ALLEGRO_AAR ${ALLEGRO_AAR} PARENT_SCOPE)
 
 if (NOT EXISTS "$ENV{ANDROID_HOME}")
   set(ENV{ANDROID_HOME} "$ENV{HOME}/Android/Sdk")
+endif()
+
+if (NOT EXISTS "$ENV{ANDROID_HOME}")
+  set(ENV{ANDROID_HOME} "$ENV{ANDROID_SDK}")
 endif()
 
 if (NOT EXISTS "$ENV{ANDROID_HOME}")
