--- a/android/gradle_project/app/build.gradle
+++ b/android/gradle_project/app/build.gradle
@@ -21,7 +21,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.liballeg.android:allegro:1.0@aar"
+   implementation fileTree(dir: 'libs', include: ['*.jar'])
+   // implementation "org.liballeg.android:allegro:1.0"
+   implementation project(path: ':allegro')
 }
 
